# vidura

./: .gitignore  LATER.md  LICENSE  Makefile  README.md  TODOS.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml  release.yml
docs/design/: m0-evaluation.md
pet/: .gitignore  Package.swift
pet/Sources/ViduraPet/: CardView.swift  Models.swift  PixelPet.swift  StateModel.swift  ViduraCore.swift  main.swift
pet/Sources/ViduraPetKit/: AnimationPolicy.swift  AppDelegate.swift  CardView.swift  CharacterAsset.swift  CharacterCaption.swift  LaunchAtLogin.swift  Models.swift  MoodTransition.swift  PanelGeometry.swift  PanelRoute.swift  PanelSurfaceHeader.swift  PetCatalog.swift  PetResolution.swift  PetsView.swift  Preferences.swift  RelativeTime.swift  SettingsView.swift  StateModel.swift  Theme.swift  ViduraCore.swift
pet/Tests/ViduraPetKitTests/: AnimationPolicyTests.swift  CharacterAssetResolutionTests.swift  CharacterCaptionTests.swift  ContentSizingTests.swift  DecodingTests.swift  DoGatingTests.swift  LaunchAtLoginTests.swift  LedgerCountsTests.swift  MoodTransitionTests.swift  NotificationGatingTests.swift  PanelGeometryTests.swift  PetCatalogTests.swift  PetMoodTests.swift  PetResolutionTests.swift  PreferencesTests.swift  RelativeTimeTests.swift  ViduraCoreBinPathTests.swift  ViduraCoreTests.swift
pet/design-export/: UI-SPEC.md
pet/packaging/: Info.plist
pet/scripts/: make-app.sh  make-icns.sh
tests/: conftest.py  test_character.py  test_chunk.py  test_cli.py  test_contract.py  test_do_cli.py  test_executor.py  test_fix_index.py  test_follow_through.py  test_hooks_cli.py  test_ingest.py  test_ledger_cli.py  test_memory.py  test_mood.py  test_redact.py  test_reflect.py  test_report.py  test_signals.py  test_state_cli.py  test_store.py  test_sweep.py  test_version.py
vidura/: character.py  chunk.py  cli.py  contract.py  do_cli.py  executor.py  fix_index.py  follow_through.py  hooks_cli.py  ingest.py  ledger_cli.py  memory.py  mood.py  redact.py  reflect.py  report.py  signals.py  state_cli.py  store.py  sweep.py  version.py
