[project]
# PyPI name is vidura-cli: "vidura" on PyPI is an unrelated, actively
# maintained agent orchestrator (name-collision check, 2026-07-10).
# The project/brand stays Vidura; the import package stays `vidura`.
name = "vidura-cli"
version = "0.1.0"
description = "A local counselor that reads your Claude Code session logs and tells you the truth about your friction patterns."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: MacOS",
    "Environment :: Console",
]

[project.urls]
Homepage = "https://github.com/mannasdev/vidura"
Releases = "https://github.com/mannasdev/vidura/releases"
Issues = "https://github.com/mannasdev/vidura/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
vidura-reflect = "vidura.cli:main"
vidura-report = "vidura.report:main"
vidura-sweep = "vidura.sweep:main"
vidura-ledger = "vidura.ledger_cli:main"
vidura-do = "vidura.do_cli:main"
vidura-state = "vidura.state_cli:main"
vidura-hook = "vidura.hooks_cli:main"

[tool.setuptools.packages.find]
include = ["vidura*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
